This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: ssl.RAND_bytes() and ssl.RAND_pseudo_bytes() don't check if num is negative
Type: crash Stage: commit review
Components: Versions: Python 3.3, Python 3.4
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: vstinner Nosy List: christian.heimes, python-dev, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2013-12-19 11:28 by vstinner, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
ssl_rand.patch vstinner, 2013-12-19 11:28 review
Messages (3)
msg206604 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2013-12-19 11:28
ssl.RAND_bytes() and ssl.RAND_pseudo_bytes() should raise a ValueError, not a SystemError, if num is negative.

Attached patch fixes that.
msg206605 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2013-12-19 11:50
LGTM
msg206624 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2013-12-19 15:47
New changeset 68ec8949dbf1 by Victor Stinner in branch '3.3':
Issue #20025: ssl.RAND_bytes() and ssl.RAND_pseudo_bytes() now raise a
http://hg.python.org/cpython/rev/68ec8949dbf1

New changeset c1d2c90ece99 by Victor Stinner in branch 'default':
(Merge 3.3) Issue #20025: ssl.RAND_bytes() and ssl.RAND_pseudo_bytes() now
http://hg.python.org/cpython/rev/c1d2c90ece99
History
Date User Action Args
2022-04-11 14:57:55adminsetgithub: 64224
2013-12-19 15:48:47vstinnersetstatus: open -> closed
resolution: fixed
2013-12-19 15:47:50python-devsetnosy: + python-dev
messages: + msg206624
2013-12-19 15:40:57serhiy.storchakasetassignee: vstinner
type: crash
stage: commit review
2013-12-19 11:50:52christian.heimessetmessages: + msg206605
2013-12-19 11:28:30vstinnercreate